--- a/Produktkatalog/MainWindow.xaml
+++ b/Produktkatalog/MainWindow.xaml
@@ -4,8 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Produktkatalog"
+        xmlns:viewModel="clr-namespace:Produktkatalog.ViewModel"
+        xmlns:view="clr-namespace:Produktkatalog.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="850">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -13,28 +15,35 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
+        
         <!--Head-->
         <Image Source="{Binding LogoPath}" Grid.Row="0" Width="200" Height="30" Margin="10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBlock Grid.Row="0" Text="Suchen" Height="20" Width="180" HorizontalAlignment="right" Background="LightGray" Margin="10 10"/>
+        <TextBox Grid.Row="0" Text="Suchen" Height="20" Width="180" HorizontalAlignment="right" Background="LightGray" Margin="10 10"/>
 
-        <Button Grid.Row="0" Content="Hinzufügen" Height="20" Width="100" HorizontalAlignment="right" Margin="0 0 220 0">
+        <Button Grid.Row="0" Command="{Binding AddProductViewCommand}" Content="Hinzufügen" Height="20" Width="100" HorizontalAlignment="Right" Margin="0 0 220 0">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="3"/>
                 </Style>
             </Button.Resources>
         </Button>
+        <Button Grid.Row="0" Command="{Binding ProductTilesViewCommand}" Content="Produktansicht" Height="20" Width="100" HorizontalAlignment="Right" Margin="0 0 350 0">
+        <Button.Resources>
+            <Style TargetType="Border">
+                <Setter Property="CornerRadius" Value="3"/>
+            </Style>
+        </Button.Resources>
+        </Button>
 
         <!--Expander for the Filters of the Products-->
-        <Expander x:Name="Expander" Grid.Row="1" Header="Filter Optionen" Expanded="Expander_Expanded" Collapsed="Expander_Collapsed" Background="White" IsExpanded="False">
+        <Expander x:Name="Expander" Grid.Row="1" Header="Filter Optionen" Background="White" IsExpanded="False">
 
-            <Grid VerticalAlignment="Center" >
+            <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Grid.Column="0">
@@ -55,17 +64,21 @@
                     <Button Content="Form u. Abmessung" Width="120" Height="20" HorizontalContentAlignment="Left" Margin="0 0 0 10"/>
                 </StackPanel>
 
-                <StackPanel Grid.Column="3">
+                <StackPanel Grid.Column="3" Grid.ColumnSpan="2" >
                     <Button Content="Montage" Width="120" Height="20" HorizontalContentAlignment="Left" Margin="0 0 0 10"/>
                     <Button Content="Lichtstrom" Width="120" Height="20" HorizontalContentAlignment="Left" Margin="0 0 0 10"/>
                     <Button Content="Sicherheit" Width="120" Height="20" HorizontalContentAlignment="Left" Margin="0 0 0 10"/>
                 </StackPanel>
+                
             </Grid>
         </Expander>
-       
-        
-        <TextBlock Text="Dies ist der restliche Inhalt der Ansicht." Grid.Row="2" FontSize="16" Margin="0 30 0 0"/>
-       
+
+       <!--  <view:ProductTilesView Grid.Row="2"/>-->
+        <ContentControl  Grid.Row="2" Content="{Binding ActiveViewModel}">
+            <ContentControl.Resources>
+                <ResourceDictionary Source="Resources/MainWindowResources.xaml"/>
+            </ContentControl.Resources>
+        </ContentControl>
 
     </Grid>
 </Window>
