--- a/Produktkatalog/View/AddProductView.xaml
+++ b/Produktkatalog/View/AddProductView.xaml
@@ -21,9 +21,9 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Rectangle Grid.Column="0" Margin="30 10 0 0" Fill="LightGray"/>
-            <Rectangle Grid.Column="1" Margin="0 10 30 0" Fill="LightGray"/>
-            <Button   Command="{Binding DeleteProductCommand}" Grid.Column="1"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 10" Content="X" Background="White"/>
+            <Button Grid.Column="0" Margin="35 10 4 2"  Background="LightGray" BorderBrush="Black" Content="Hinzufügen Bild 1" Command="{Binding AddPictureOneCommand}"/>
+            <Button Grid.Column="1" Margin="4 10 35 2" Background="LightGray" BorderBrush="Black" Content="Hinzufügen Bild 2" Command="{Binding AddPictureOneCommand}"/>
+            <Button   Command="{Binding ExecuteProductCommand}" Grid.Column="1" Height="18" Width="18" HorizontalAlignment="Right"  VerticalAlignment="Top" Margin="10 10" Content="X" Background="White"/>
   </Grid>
       
 
@@ -38,62 +38,62 @@
                         <StackPanel Grid.Column="0" Margin="80 20 0 10">
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Produktname:" Width="100"/>
-                    <TextBox Text="{Binding NewProductProductname }" Name="ProductName" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductProductname }" Name="ProductName" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Produktfamilie:" Width="100" />
-                    <TextBox Text="{Binding NewProductProductfamiliy}" Name="ProductFamily" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductProductfamiliy}" Name="ProductFamily" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Einsatzbereiche:" Width="100"/>
-                    <TextBox Text="{Binding NewProductApplicationPlace}" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductApplicationPlace}" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Montageort:" Width="100"/>
-                                <TextBox Text="{Binding NewProductInstallation}" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductInstallation}" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Montageart:" Width="100"/>
-                                <TextBox Text="{Binding NewProductMountingType}" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductMountingType}" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Abmessungen:" Width="100"/>
-                                <TextBox Text="{Binding NewProductProductDimension}" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductProductDimension}" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Form:" Width="100"/>
-                                <TextBox Text="{Binding NewProductForm}" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductForm}" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Verstellbarkeit:" Width="100"/>
-                                <TextBox Text="{Binding NewProductAdjustability}" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductAdjustability}" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Lichtstrom:" Width="100"/>
-                                <TextBox Text="{Binding NewProductLumFlux}" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductLumFlux}" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Leistung:" Width="100"/>
-                                <TextBox Text="{Binding NewProductPerformance}" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductPerformance}" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Lichtausbeute:" Width="100"/>
-                                <TextBox Text="{Binding NewProductLightYield}" Margin ="20 3 0 0" Width="350" />
+                    <TextBox Text="{Binding NewProductLightYield}" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
-                                <Label Content="Farbwiedergabei.:" Width="100"/>
-                                <TextBox Text="{Binding NewProductColorRenderingIndex}" Margin ="20 3 0 0" Width="350" />
+                                <Label Content="Farbwiedergabe:" Width="100"/>
+                    <TextBox Text="{Binding NewProductColorRenderingIndex}" Margin ="0 3 0 0" Width="370" />
                             </StackPanel>
                         </StackPanel>
 
                         <StackPanel Grid.Column="2">
-                            <Label Content="Weiter Informationen:" Margin="35 0"/>
+                            <Label Content="Weiter Informationen:" Margin=" 21 0"/>
                             <TextBox Text="{Binding NewProductInformation}" Height="200" Width="200" AcceptsReturn="True" TextWrapping="Wrap"/>
                         </StackPanel>
 
-            <Button Grid.Column ="2" Command="{Binding ProductAddCommand}" Content="ProductAdd"  HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 30 100" />
+            <Button Grid.Column ="2" Command="{Binding ProductAddCommand}" Content="Hinzufügen"  HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 100 20" />
 
-            <Button Grid.Column ="2" Command="{Binding AddProductCommand}" Content="Hinzufügen"  HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 30 20" />
+            <Button Grid.Column ="2" Command="{Binding AddProductCommand}" Content="Speichern"  HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 30 20" />
 
         </Grid>
 
