--- a/Produktkatalog/View/DetailProductView.xaml
+++ b/Produktkatalog/View/DetailProductView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Produktkatalog.View.DetailProductView"
+﻿<UserControl x:Class="Produktkatalog.View.DetailProductView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,13 +6,9 @@
       xmlns:local="clr-namespace:Produktkatalog.ViewModel"
       xmlns:viewModel="clr-namespace:Produktkatalog.ViewModel"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="DetailProductView">
-
-    <Page.DataContext>
-        <local:AddProductViewModel/>
-    </Page.DataContext>
-
+      d:DesignHeight="450" d:DesignWidth="800">
+   
+    
     <Grid Background="White">
 
         <Grid.ColumnDefinitions>
@@ -45,7 +41,7 @@
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0" Height="20">
-                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="15" Text="{Binding NewProductProductname}"/>
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="15" x:Name="ProductName"/>
             </Grid>
 
             <Grid Grid.Row="1" Height="20">
@@ -53,12 +49,12 @@
                     <ColumnDefinition Width="157*"/>
                     <ColumnDefinition Width="110*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="10" Text="{Binding ProductName }" Margin="133,0,0,0"/>
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="10" Name="x" Margin="133,0,0,0"/>
             </Grid>
 
             <StackPanel Grid.Row="2" Height="330" VerticalAlignment="Top">
                 <Label Content="Produktinformationen:" Margin="35 0"/>
-                <TextBlock Text="{Binding AddProductViewModel.NewProductInformation}" Height="300" Width="250"/>
+                <TextBlock Text="{Binding SelectedProduct.Information}" Height="300" Width="250"/>
             </StackPanel>
         </Grid>
 
@@ -71,53 +67,53 @@
             <StackPanel Grid.Column="0" Margin="0 50">
                 <StackPanel Orientation="Horizontal">
                     <Label  Content="Produktname:" Width="100"/>
-                    <TextBlock  Text="{Binding AddProductViewModel.NewProductProductName}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock  Text="{Binding SelectedProduct.ProductName}" Margin ="20 3 0 0" Width="140" /> <!--ACHTUNG ÄNDERN BITTE-->
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Produktfamilie:" Width="100" />
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductProductfamiliy}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.Productfamiliy}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Einsatzbereiche:" Width="100"/>
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductApplicationPlace}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.ApplicationPlace}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Montageort:" Width="100"/>
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductInstallation}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.Installation}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Montageart:" Width="100"/>
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductMountingType}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.MountingType}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Abmessungen:" Width="100"/>
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductProductDimension}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.ProductDimension}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Form:" Width="100"/>
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductForm}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.Form}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Verstellbarkeit:" Width="100"/>
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductAdjustability}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.Adjustability}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Lichtstrom:" Width="100"/>
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductLumFlux}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.ProductLumFlux}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Leistung:" Width="100"/>
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductPerformance}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.Performance}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Lichtausbeute:" Width="100"/>
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductLightYield}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.LightYield}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Farbwiedergabei.:" Width="100"/>
-                    <TextBlock Text="{Binding AddProductViewModel.NewProductColorRenderingIndex}" Margin ="20 3 0 0" Width="140" />
+                    <TextBlock Text="{Binding SelectedProduct.ColorRenderingIndex}" Margin ="20 3 0 0" Width="140" />
                 </StackPanel>
             </StackPanel>
         </Grid>
     </Grid>
-</Page>
+</UserControl>
