--- a/Produktkatalog/View/ChangeProductInfoView.xaml
+++ b/Produktkatalog/View/ChangeProductInfoView.xaml
@@ -3,9 +3,96 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Produktkatalog.View"
+             xmlns:local="clr-namespace:Produktkatalog.View" xmlns:viewmodel="clr-namespace:Produktkatalog.ViewModel"
+             d:DataContext="{d:DesignInstance Type=viewmodel:AddProductViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="800">
-    <Grid>
+
+        <Grid Height="534" VerticalAlignment="Center" Background="White">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="150"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <Button Grid.Column="0" Margin="35 10 4 2"  Background="LightGray" BorderBrush="Black" Content="Hinzufügen Bild 1" Command="{Binding AddPictureOneCommand}"/>
+                <Button Grid.Column="1" Margin="4 10 35 2" Background="LightGray" BorderBrush="Black" Content="Hinzufügen Bild 2" Command="{Binding AddPictureOneCommand}"/>
+                <Button   Command="{Binding ExecuteProductCommand}" Grid.Column="1" Height="18" Width="18" HorizontalAlignment="Right"  VerticalAlignment="Top" Margin="10 10" Content="X" Background="White"/>
+            </Grid>
+
+
+        <Grid Grid.Row="1" Margin="0 5 0 0">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="250"/>
+            </Grid.ColumnDefinitions>
+
+
+            <StackPanel Grid.Column="0" Margin="80 20 0 10">
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Produktname:" Width="100"/>
+                    <TextBox Text="{Binding NewProductProductname}" Name="ProductName" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Produktfamilie:" Width="100" />
+                    <TextBox Text="{Binding NewProductProductfamiliy}" Name="ProductFamily" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Einsatzbereiche:" Width="100"/>
+                    <TextBox Text="{Binding NewProductApplicationPlace}" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Montageort:" Width="100"/>
+                    <TextBox Text="{Binding NewProductInstallation}" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Montageart:" Width="100"/>
+                    <TextBox Text="{Binding NewProductMountingType}" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Abmessungen:" Width="100"/>
+                    <TextBox Text="{Binding NewProductProductDimension}" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Form:" Width="100"/>
+                    <TextBox Text="{Binding NewProductForm}" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Verstellbarkeit:" Width="100"/>
+                    <TextBox Text="{Binding NewProductAdjustability}" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Lichtstrom:" Width="100"/>
+                    <TextBox Text="{Binding NewProductLumFlux}" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Leistung:" Width="100"/>
+                    <TextBox Text="{Binding NewProductPerformance}" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Lichtausbeute:" Width="100"/>
+                    <TextBox Text="{Binding NewProductLightYield}" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Farbwiedergabe:" Width="100"/>
+                    <TextBox Text="{Binding NewProductColorRenderingIndex}" Margin ="0 3 0 0" Width="370" />
+                </StackPanel>
+            </StackPanel>
+
+            <StackPanel Grid.Column="2">
+                <Label Content="Weiter Informationen:" Margin=" 21 0"/>
+                <TextBox Text="{Binding NewProductInformation}" Height="200" Width="200" AcceptsReturn="True" TextWrapping="Wrap"/>
+            </StackPanel>
+
+            <Button Grid.Column ="2" Command="{Binding UpdateProductCommand}" Content="Aktualisieren"  HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 30 20" />
+
+        </Grid>
     </Grid>
 </UserControl>
