--- a/Produktkatalog/View/ProductTilesView.xaml
+++ b/Produktkatalog/View/ProductTilesView.xaml
@@ -5,20 +5,30 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Produktkatalog.ViewModel"
              xmlns:viewModel="clr-namespace:Produktkatalog.ViewModel"
-             xmlns:view="clr-namespace:Produktkatalog.View" xmlns:i="clr-namespace:Microsoft.VisualBasic;assembly=Microsoft.VisualBasic.Core"
+             xmlns:view="clr-namespace:Produktkatalog.View" 
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="800">
     
     <UserControl.Resources>
         <DataTemplate x:Key="ProductDataTemplate" >
             <Border Margin="15" Background="WhiteSmoke" CornerRadius="10" BorderThickness="0.8" BorderBrush="Black">
-            <Grid Height="250" >                
+               
+            <Grid Height="250">    
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="35"/>
                         <RowDefinition Height="80"/>
                     </Grid.RowDefinitions>
-                    <Button Content="X" Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListView}}, Path=DataContext.OnDeleteProductCommand}" CommandParameter="{Binding ProductId}" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="6" HorizontalContentAlignment="Center" Height="10" Width="12" Margin="8 8"/>
+                    
+                    <Button Content="X" 
+                            Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}},Path=DataContext.OnDeleteProductCommand}" 
+                            CommandParameter="{Binding ProductId}" 
+                            HorizontalAlignment="Right" 
+                            VerticalAlignment="Top" 
+                            HorizontalContentAlignment="Center" 
+                            FontSize="6"                             
+                            Height="10" Width="12" Margin="8 8"/>
                     <Image Grid.Row="0" Height="100" Width="200" Source="{Binding BildURL}" />
                     <Grid Grid.Row="1" >
                         <Label Content="{Binding ProductName}" HorizontalAlignment="Center" FontSize="13"  Width="210" Padding="Auto" HorizontalContentAlignment="Center"/>
@@ -35,7 +45,7 @@
                         <Label Grid.Column="1" Content="{Binding LightYield}" FontSize="10"  HorizontalAlignment="Center"  Padding="Auto" Margin="0 1"/>
                         <Label Grid.Column="1" Content="{Binding Performance}" FontSize="10" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0 1"/>
                     </Grid>                
-            </Grid>  
+                 </Grid>  
             </Border>
         </DataTemplate>
     </UserControl.Resources>
@@ -47,6 +57,12 @@
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
                   SelectedItem="{Binding SelectedProduct}"
                   d:ItemsSource="{d:SampleData ItemCount=5}">
+            
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <ei:CallMethodAction MethodName="DoubleClickMethod" TargetObject="{Binding}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel/>
