--- a/Produktkatalog/View/DetailProductView.xaml
+++ b/Produktkatalog/View/DetailProductView.xaml
@@ -4,12 +4,13 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"           
       xmlns:local="clr-namespace:Produktkatalog.ViewModel"
-      xmlns:viewModel="clr-namespace:Produktkatalog.ViewModel" d:DataContext="{d:DesignInstance Type=local:DetailProductViewModel}"
-             mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800">
+      xmlns:viewModel="clr-namespace:Produktkatalog.ViewModel" 
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+             DataContext="{Binding Source={x:Static local:MainWindowViewModel.Instance}}">
 
 
-    <Grid Background="White">
+    <Grid Background="White" x:Name="DetailsView">
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -23,13 +24,13 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
-                <Image Grid.Row="0" Margin="10"  Source="{Binding BildURL}" />
+                <Image Grid.Row="0" Margin="10"  Source="{Binding SelectedProduct.BildURL}" />
                 <!-- Fill Picture1 here-->
                 <!--<Image Source="Resource/Dial.png"/> -->
             </Grid>
 
             <Grid Grid.Row="1">
-                <Image Grid.Row="0" Margin="10" Source="{Binding BildURL2}" />
+                <Image Grid.Row="0" Margin="10" Source="{Binding SelectedProduct.BildURL2}" />
                 <!-- Fill Picture2 here-->
                 <!--  <Image Source="Resource/Dial.png"/>-->
             </Grid>
@@ -43,15 +44,15 @@
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0" Height="25">
-                <TextBlock Text="{Binding ProductName}" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="15" x:Name="ProductName"/>
+                <TextBlock Text="{Binding  SelectedProduct.ProductName}" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="15" x:Name="ProductName"/>
             </Grid>
 
-            <Grid Grid.Row="1" Height="20">                
+            <Grid Grid.Row="1" Height="20">
                 <TextBlock Text="{Binding ProductDimension}" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="10" x:Name="ProductDimension" />
             </Grid>
 
             <StackPanel Grid.Row="2" Margin="0 32" VerticalAlignment="Top">
-                <Label Content="Produktinformationen:" Margin="35 0"/>
+                <Label Content="Produktinformationen:" />
                 <TextBlock Text="{Binding MoreInformation}" Height="285" Width="250" TextWrapping="Wrap"/>
             </StackPanel>
         </Grid>
@@ -62,7 +63,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Button Content="X" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" />
+            <Button Content="X" Command="{Binding ExecuteDetailProductCommand}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" />
             <Button Content="Bearbeiten" Command="{Binding ChangeProductInfoViewCommand}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 35 15"/>
             <StackPanel Grid.Column="0" VerticalAlignment="Bottom" Margin="0 0 0 55">
                 <StackPanel Orientation="Horizontal">
