--- a/Produktkatalog/View/ProductTilesView.xaml
+++ b/Produktkatalog/View/ProductTilesView.xaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:Produktkatalog.ViewModel"
              xmlns:viewModel="clr-namespace:Produktkatalog.ViewModel"
              xmlns:view="clr-namespace:Produktkatalog.View" 
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
+             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="800">
     
