--- a/Produktkatalog/App.xaml
+++ b/Produktkatalog/App.xaml
@@ -1,22 +1,6 @@
 ﻿<Application x:Class="Produktkatalog.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Produktkatalog"
-             StartupUri="MainWindow.xaml"
-             xmlns:viewModel="clr-namespace:Produktkatalog.ViewModel"
-             xmlns:view="clr-namespace:Produktkatalog.View">
-    
-    <Application.Resources>
-        <DataTemplate DataType="{x:Type viewModel:ProductTilesViewModel}">
-            <view:ProductTilesView/>
-        </DataTemplate>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"           
+             StartupUri="MainWindow.xaml">
 
-        <DataTemplate DataType="{x:Type viewModel:DetailProductViewModel}">
-            <view:DetailProductView/>
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewModel:AddProductViewModel}">
-            <view:AddProductView/>
-        </DataTemplate>
-    </Application.Resources>
 </Application>
