--- a/Produktkatalog/View/AddProductView.xaml
+++ b/Produktkatalog/View/AddProductView.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Produktkatalog.ViewModel" 
-             d:DataContext="{d:DesignInstance Type=local:AddProductViewModel}"
+             xmlns:local="clr-namespace:Produktkatalog"
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="800">
 
