--- a/Produktkatalog/View/DetailProductView.xaml
+++ b/Produktkatalog/View/DetailProductView.xaml
@@ -2,21 +2,23 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"           
-      xmlns:local="clr-namespace:Produktkatalog.ViewModel"
-      xmlns:viewModel="clr-namespace:Produktkatalog.ViewModel" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"     
+      xmlns:model="clr-namespace:Produktkatalog.Model"
+      xmlns:local="clr-namespace:Produktkatalog" 
+      xmlns:viewmodel="clr-namespace:Produktkatalog.ViewModel" 
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-             DataContext="{Binding Source={x:Static local:MainWindowViewModel.Instance}}">
+      d:DesignHeight="450" d:DesignWidth="800">
 
-
-    <Grid Background="White" x:Name="DetailsView">
-
+    <Grid  Background="White" x:Name="DetailView">
+       
+            <Grid>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+    
 
         <Grid Grid.Column="0">
             <Grid.RowDefinitions>
@@ -24,13 +26,13 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
-                <Image Grid.Row="0" Margin="10"  Source="{Binding SelectedProduct.BildURL}" />
+                    <Image Grid.Row="0" Margin="10"  Source="{Binding SelectedProduct.BildURL}" />
                 <!-- Fill Picture1 here-->
                 <!--<Image Source="Resource/Dial.png"/> -->
             </Grid>
 
             <Grid Grid.Row="1">
-                <Image Grid.Row="0" Margin="10" Source="{Binding SelectedProduct.BildURL2}" />
+                    <Image Grid.Row="0" Margin="10" Source="{Binding SelectedProduct.BildURL2}" />
                 <!-- Fill Picture2 here-->
                 <!--  <Image Source="Resource/Dial.png"/>-->
             </Grid>
@@ -44,16 +46,16 @@
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0" Height="25">
-                <TextBlock Text="{Binding  SelectedProduct.ProductName}" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="15" x:Name="ProductName"/>
+                    <TextBlock Text="{Binding SelectedProduct.ProductName}" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="15" x:Name="ProductName"/>
             </Grid>
 
             <Grid Grid.Row="1" Height="20">
-                <TextBlock Text="{Binding ProductDimension}" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="10" x:Name="ProductDimension" />
+                    <TextBlock Text="{Binding SelectedProduct.ProductDimension}" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="10" x:Name="ProductDimension" />
             </Grid>
 
             <StackPanel Grid.Row="2" Margin="0 32" VerticalAlignment="Top">
                 <Label Content="Produktinformationen:" />
-                <TextBlock Text="{Binding MoreInformation}" Height="285" Width="250" TextWrapping="Wrap"/>
+                    <TextBlock Text="{Binding SelectedProduct.MoreInformation}" Height="285" Width="250" TextWrapping="Wrap"/>
             </StackPanel>
         </Grid>
 
@@ -68,49 +70,51 @@
             <StackPanel Grid.Column="0" VerticalAlignment="Bottom" Margin="0 0 0 55">
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Produktfamilie:" Width="100" />
-                    <TextBlock Text="{Binding ProductFamily}"  Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.ProductFamily}"  Width="160" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Einsatzbereiche:" Width="100"/>
-                    <TextBlock Text="{Binding ApplicationPlace}" Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.ApplicationPlace}" Width="160" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Montageort:" Width="100"/>
-                    <TextBlock Text="{Binding Installation}" Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.Installation}" Width="160" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Montageart:" Width="100"/>
-                    <TextBlock Text="{Binding MountingType}" Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.MountingType}" Width="160" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Abmessungen:" Width="100"/>
-                    <TextBlock Text="{Binding ProductDimension}" Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.ProductDimension}" Width="160" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Form:" Width="100"/>
-                    <TextBlock Text="{Binding Form}" Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.Form}" Width="160" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Verstellbarkeit:" Width="100"/>
-                    <TextBlock Text="{Binding Adjustability}" Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.Adjustability}" Width="160" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Lichtstrom:" Width="100"/>
-                    <TextBlock Text="{Binding LumFlux}" Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.LumFlux}" Width="160" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Leistung:" Width="100"/>
-                    <TextBlock Text="{Binding Performance}" Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.Performance}" Width="160" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Lichtausbeute:" Width="100"/>
-                    <TextBlock Text="{Binding LightYield}" Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.LightYield}" Width="160" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Farbwiedergabei.:" Width="100"/>
-                    <TextBlock Text="{Binding ColorRenderingIndex}" Width="160" />
+                        <TextBlock Text="{Binding SelectedProduct.ColorRenderingIndex}" Width="160" />
                 </StackPanel>
             </StackPanel>
         </Grid>
+            </Grid>
+
     </Grid>
 </UserControl>
